--- a/configs/init/init.exynos9610.rc
+++ b/configs/init/init.exynos9610.rc
@@ -799,3 +799,8 @@ on post-fs
     chown root system /spu/sensorhub
     chown root system /spu/sensorhub/shub_spu.bin
     write /sys/devices/platform/11980000.contexthub/poweron 1
+
+
+on property:sys.boot_completed=1 && property:ro.boot.fpsensor=gdx
+    # stop fps_hal
+    stop vendor.fps_hal
